<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/splash_dest">

    <fragment
        android:id="@+id/splash_dest"
        android:name="com.easymanga.ui.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/next_action"
            app:destination="@id/manga_list_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/splash_dest"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/manga_list_dest"
        android:name="com.easymanga.ui.mangalist.MangaListFragment"
        android:label="@string/manga_list"
        tools:layout="@layout/fragment_manga_list" />

    <fragment
        android:id="@+id/episode_list_dest"
        android:name="com.easymanga.ui.episodelist.EpisodeListFragment"
        android:label="@string/episode_list"
        tools:layout="@layout/fragment_episode_list" />
</navigation>
