<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.easymanga.ui.base.BaseViewModel.LoadingState" />

        <variable
            name="viewmodel"
            type="com.easymanga.ui.SharedViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingleft_download_content"
            android:layout_marginTop="@dimen/margintop_download"
            android:text="@{@string/download_totalchapters(viewmodel.totalEpisodes)}"
            android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.GONE : View.VISIBLE}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding_mangalist_listitem_10dp"
            tools:context=".ui.download.DownloadFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chapter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.GONE : View.VISIBLE}" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.VISIBLE : View.GONE}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/mes_no_items"
                android:textSize="@dimen/textsize_all_no_items_medium"
                android:visibility="@{(viewmodel.loadingState != LoadingState.IDLE &amp;&amp; viewmodel.loadingState != LoadingState.LOADING &amp;&amp; viewmodel.episodeList.size() &lt;= 0) ? View.VISIBLE : View.GONE}" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_all_divider"
            android:background="@color/gray"
            android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.GONE : View.VISIBLE}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_download"
            android:gravity="center"
            android:text="@{@string/download_countselectedchapters(viewmodel.countOfSelectedEpisodes)}"
            android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.GONE : View.VISIBLE}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_all_divider"
            android:layout_marginTop="@dimen/margintop_download"
            android:background="@color/gray"
            android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.GONE : View.VISIBLE}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_download"
            android:orientation="horizontal"
            android:visibility="@{viewmodel.loadingState == LoadingState.LOADING ? View.GONE : View.VISIBLE}">

            <RelativeLayout
                android:id="@+id/layout_select_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewmodel.toggleSelectedStatusExcludingDownloadedEpisodes()}">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:selectAllImageSrc="@{safeUnbox(viewmodel.selectedAllEpisode)}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_all_small"
                        android:text="@string/all_selectall" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="@dimen/size_all_divider"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/layout_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="@{viewmodel.countOfSelectedEpisodes > 0}">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_file_download_normal"
                        app:downloadImageSrc="@{viewmodel.countOfSelectedEpisodes > 0}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_all_small"
                        android:text="@string/all_download" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
